syntax = "proto3";
option go_package =".;protos";

message GetTransactionPointsRequest {
    string UserId = 1;
}
message GetTransactionPointsResponse {
    uint32 TransactionPoints = 1;
}

service Transaction {
    rpc GetTransactionPoints (GetTransactionPointsRequest) returns (GetTransactionPointsResponse);
}

//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative Transaction.proto
